Remove Armadillo from all modules in the platform meta-module (#267)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -39,16 +39,20 @@ set(NUCLEAR_MODULE_DIR
     "module"
     CACHE PATH "The path to the module directory for NUClear"
 )
+set(NUCLEAR_SHARED_DIR
+    "shared"
+    CACHE PATH "The path to the module directory for NUClear"
+)
 set(NUCLEAR_MESSAGE_DIR
-    "shared/message"
+    "${NUCLEAR_SHARED_DIR}/message"
     CACHE PATH "The path to the message directory for NUClear"
 )
 set(NUCLEAR_UTILITY_DIR
-    "shared/utility"
+    "${NUCLEAR_SHARED_DIR}/utility"
     CACHE PATH "The path to the utility dir for NUClear"
 )
 set(NUCLEAR_EXTENSION_DIR
-    "shared/extension"
+    "${NUCLEAR_SHARED_DIR}/extension"
     CACHE PATH "The path to the extension dir for NUClear"
 )
 
@@ -58,7 +62,7 @@ mark_as_advanced(
 )
 
 # Make our shared directory to output files too
-file(MAKE_DIRECTORY ${PROJECT_BINARY_DIR}/shared)
+file(MAKE_DIRECTORY ${PROJECT_BINARY_DIR}/${NUCLEAR_SHARED_DIR})
 
 # Settings for the compiler to make NUClear work
 include(NUClearCompilerSettings)
